[build-system]
build-backend = "setuptools.build_meta"
requires = ["build","ptpython","pytest","pytest-ordering","pytest-dependency","pipenv","pip","version-parser"]
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"*" = ["Pipfile", "*.pypi"]
[project]
name = "wallet"
version = "0.1.3"
readme = "README.md"
[project.scripts]
wallet = "wallet.wallet:exec"
